// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Elements Checkbox Renders 1`] = `
<div>
  <input
    type="checkbox"
    value=""
  />
</div>
`;

exports[`Form Elements Radio Button Renders 1`] = `
<div>
  <input
    type="radio"
    value=""
  />
</div>
`;
